CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_LANGUAGE(CXX)

PROJECT(sfml-cpp CXX)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -pthread")

#FIND_PACKAGE(SFML 2.0 REQUIRED system window graphics)

set(CMAKE_BUILD_TYPE debug)

INCLUDE_DIRECTORIES(
  ${SFML_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/include
)

find_package(OpenGL)
find_package(GLUT)

FOREACH(MODULE source include)
  FILE(GLOB MODULES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}/*.h)
  SET(SOURCES ${MODULES_SOURCES} ${SOURCES})
ENDFOREACH(MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${VERSION_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  sfml-window sfml-system sfml-graphics    ${OPENGL_gl_LIBRARY}
${GLUT_LIBRARIES} )
  #${SFML_LIBRARIES})


